fixed color for nav on mobile devices

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -788,7 +788,7 @@ a:hover {
     margin: auto;
     max-width: 100%;
     width: 100%;
-    padding: 0 2rem;
+    padding: 0;
   }
 }
 
