--- a/style/scss/components/_profile.scss
+++ b/style/scss/components/_profile.scss
@@ -33,7 +33,7 @@
       margin: auto;
       max-width: 100%;
       width: 100%;
-      padding: 0 2rem;
+      padding: 0;
     }
   }
 
